--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://indaqoo.github.io/techdegree-unit-6/",
+  "homepage": "https://indaqoo.github.io/techdegree-unit-6",
   "scripts": {
-    "deploy": "gh-paged -d public"
+    "deploy": "gh-pages -d public"
   },
   "author": "Roberts Peirags",
   "license": "MIT",
